# bashspark

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  mainpage.dox
cmake/: boost.cmake  cmp.cmake  doxygen.cmake  nlohmann.cmake
docs/html/: BashSpark_8h.html  BashSpark_8h__dep__incl.map  BashSpark_8h__dep__incl.md5  BashSpark_8h__incl.map  BashSpark_8h__incl.md5  BashSpark_8h_source.html  annotated.html  annotated_dup.js  api_usage.html  classbs_1_1basic__ifakestream-members.html  classbs_1_1basic__ifakestream.html  classbs_1_1basic__ifakestream.js  classbs_1_1basic__iinullstream-members.html  classbs_1_1basic__iinullstream.html  classbs_1_1basic__iinullstream.js  classbs_1_1basic__iinullstream__coll__graph.map  classbs_1_1basic__iinullstream__inherit__graph.md5  classbs_1_1basic__nullbuffer-members.html  classbs_1_1basic__nullbuffer.html  classbs_1_1basic__nullbuffer.js  classbs_1_1basic__nullbuffer__coll__graph.map  classbs_1_1basic__nullbuffer__inherit__graph.md5  classbs_1_1basic__ofakestream-members.html  classbs_1_1basic__ofakestream.html  classbs_1_1basic__ofakestream.js  classbs_1_1basic__onullstream-members.html  classbs_1_1basic__onullstream.html  classbs_1_1basic__onullstream.js  classbs_1_1basic__onullstream__inherit__graph.map  classbs_1_1basic__onullstream__inherit__graph.md5  classbs_1_1command-members.html  classbs_1_1command.html  classbs_1_1command.js  classbs_1_1command__echo-members.html  classbs_1_1command__echo.html  classbs_1_1command__echo.js  classbs_1_1command__echo__coll__graph.map  classbs_1_1command__echo__inherit__graph.md5  classbs_1_1command__eval-members.html  classbs_1_1command__eval.html  (+830 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_4.js  (+52 more)
include/BashSpark/: BashSpark.h  command.h  shell.h
include/BashSpark/command/: command_env.h  command_fcall.h  command_math.h  command_seq.h  command_test.h  command_var.h
include/BashSpark/shell/: shell_arg.h  shell_env.h  shell_keyword.h  shell_node.h  shell_node_visitor.h  shell_node_visitor_json.h  shell_parser.h  shell_parser_exception.h  shell_session.h  shell_status.h  shell_tokenizer.h  shell_var.h  shell_vtable.h
include/BashSpark/tools/: fakestream.h  hash.h  nullstream.h  shell_def.h  shell_hash.h  utf.h
resources/: note.txt
src/BashSpark/: command.cpp  shell.cpp  test.cpp
src/BashSpark/command/: command_env.cpp  command_fcall.cpp  command_math.cpp  command_seq.cpp  command_test.cpp  command_var.cpp
src/BashSpark/shell/: shell_node.cpp  shell_node_evaluate.cpp  shell_node_expand.cpp  shell_node_visitor_json.cpp  shell_parser.cpp  shell_parser_exception.cpp  shell_tokenizer.cpp  shell_tools.h  token_holder.h
test/include/BashSpark/test/: test_shell.h
test/src/BashSpark/test/: test_shell.cpp
